Testing a quick push to make sure I can edit this branch directly.

--- a/docs/partner_editable/pre-reqs.adoc
+++ b/docs/partner_editable/pre-reqs.adoc
@@ -10,4 +10,8 @@ _Describe any setup required in the partner portal/account prior to template lau
 
 ==== Prepare for the deployment
 
-_Describe any preparation required to complete the product build, such as obtaining licenses or placing files in S3_
+Prior to deployment, you will need to fill out a web form at:  <insert url> in order to obtain a download link and a license key.  
+
+The download link is required by the installation process and you need to input the presigned URL you receive into the cloudformation template.
+
+The software license will be used in the post-install process.
