--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -1,14 +1,14 @@
 // Change the following attributes.
 :quickstart-project-name: quickstart-documentation-base
-:partner-product-name: Example Product Name
+:partner-product-name: DataRobot AutoML 7.1
 // For the following attribute, if you have no short name, enter the same name as partner-product-name.
-:partner-product-short-name: Example Product Name
+:partner-product-short-name: DataRobot AutoML 7.1
 // If there's no partner, comment partner-company-name.
 :partner-company-name: Example Company Name, Ltd.
-:doc-month: Month of launch or significant update (spelled out)
-:doc-year: Year
+:doc-month: June
+:doc-year: 2021
 // Uncomment the following "contributor" attributes as appropriate. If the partner agrees to include names, enter contributor names for every line we use. If partner doesn't want to include names, delete all placeholder names and keep only "{partner-company-name}" and "AWS Quick Start team." 
-//:partner-contributors: Shuai Ye, Michael McConnell, and John Smith, {partner-company-name}
+:partner-contributors: Wes Wagner, Dennis Whitney, {partner-company-name}
 //:other-contributors: Akua Mansa, Trek10
 //:aws-contributors: Janine Singh, AWS IoT Partner team
 :quickstart-contributors: Toni Jones, AWS Quick Start team
@@ -16,7 +16,7 @@
 // for example, 30 minutes or 60 minutes. 
 // Use hours for deployment times greater than 60 minutes (rounded to a quarter hour),
 // for example, 1.25 hours, 2 hours, 2.5 hours.
-:deployment_time: 15 minutes / 60 minutes / 1.5 hours
+:deployment_time: 2.0 hours
 :default_deployment_region: us-east-1
 :parameters_as_appendix:
 // Uncomment the following two attributes if you are using an AWS Marketplace listing.
