--- a/docs/partner_editable/additional_info.adoc
+++ b/docs/partner_editable/additional_info.adoc
@@ -1,11 +1,13 @@
 // Add steps as necessary for accessing the software, post-configuration, and testing. Don’t include full usage instructions for your software, but add links to your product documentation for that information.
 //Should any sections not be applicable, remove them
 
-== Test the deployment
-// If steps are required to test the deployment, add them here. If not, remove the heading
-
 == Post-deployment steps
 // If post-deployment steps are required, add them here. If not, remove the heading
+
+Login to the application by targeting your hostname you provided for the application server (or the AWS generated DNS name for the port 80 front end load balancer if you chose an insecure installation)
+
+The initial admin username is: localadmin@datarobot.com
+The password can be found in the account used to install run the quickstart inside secrets manager.
 
 == Best practices for using {partner-product-short-name} on AWS
 // Provide post-deployment best practices for using the technology on AWS, including considerations such as migrating data, backups, ensuring high performance, high availability, etc. Link to software documentation for detailed information.
@@ -15,9 +17,13 @@ _Add any best practices for using the software._
 == Security
 // Provide post-deployment best practices for using the technology on AWS, including considerations such as migrating data, backups, ensuring high performance, high availability, etc. Link to software documentation for detailed information.
 
-_Add any security-related information._
+Do not use or share the localadmin@datarobot.com, use it to create seperate accounts for each user and assign appropriate permissions by role.
+If you initially chose an HTTP installation, we highly recommend that you edit the front end load balancers to change the listeners to port 443 and add a certificate you control to secure the installation.
+The installation leverages your default EBS encryption key for the region into which it was installed. Rotate this key to a different key if your security policies require it.
+The base install creates a crontab entry to dump the data into a backups directory on the S3 bucket at midnight. We recommend changing this to your backup and retention processes/policies.
 
 == Other useful information
 //Provide any other information of interest to users, especially focusing on areas where AWS or cloud usage differs from on-premises usage.
 
-_Add any other details that will help the customer use the software on AWS._
+This install is setup to autoscale to 10 workers. If you find that is insufficient for training models in a timely manner, reach out to sales@datarobot.com to obtain additional capacity and customer-facing data scientist support for a larger proof of concept effort.
+
