--- a/docs/partner_editable/regions.adoc
+++ b/docs/partner_editable/regions.adoc
@@ -1,6 +1,18 @@
 This Quick Start supports the following Regions:
 
-* us-east-1, US East (N. Virginia) (EXAMPLE)
-* us-east-2, US East (Ohio) (EXAMPLE)
+US East (Ohio)	us-east-2
+US East (N. Virginia)	us-east-1
+US West (N. California)	us-west-1
+US West (Oregon)	us-west-2
+Asia Pacific (Seoul)	ap-northeast-2
+Asia Pacific (Tokyo)	ap-northeast-1
+Europe (Ireland)	eu-west-1
+Europe (London)	eu-west-2
+Europe (Milan)	eu-south-1
+Europe (Paris)	eu-west-3
+Europe (Stockholm)	eu-north-1
+South America (São Paulo)	sa-east-1
+
+Please reach out to sales@datarobot.com if you have a need to deploy in another region.
 
 //Full list: https://docs.aws.amazon.com/general/latest/gr/rande.html
