--- a/docs/partner_editable/service_limits.adoc
+++ b/docs/partner_editable/service_limits.adoc
@@ -3,12 +3,12 @@
 |Resource |This deployment uses
 
 // Space needed to maintain table headers
-|VPCs |<n>
-|Elastic IP addresses |<n>
+|VPCs |0
+|Elastic IP addresses |0
 |Security groups |<n>
 |AWS Identity and Access Management (IAM) roles |<n>
-|Auto Scaling groups |<n>
-|Application Load Balancers |<n>
-|Network Load Balancers |<n>
+|Auto Scaling groups |1
+|Application Load Balancers |2
+|Network Load Balancers |0
 |<type> instances |<n>
 |===
