--- a/docs/partner_editable/additional_info.adoc
+++ b/docs/partner_editable/additional_info.adoc
@@ -9,6 +9,8 @@ Login to the application by targeting your hostname you provided for the applica
 The initial admin username is: localadmin@datarobot.com
 The password can be found in the account used to install run the quickstart inside secrets manager.
 
+When you have logged in, leverage the menu in the upper right hand corner to find the drop down to allow you to insert the license key you received from DataRobot.
+
 == Best practices for using {partner-product-short-name} on AWS
 // Provide post-deployment best practices for using the technology on AWS, including considerations such as migrating data, backups, ensuring high performance, high availability, etc. Link to software documentation for detailed information.
 
