--- a/docs/partner_editable/licenses.adoc
+++ b/docs/partner_editable/licenses.adoc
@@ -1,3 +1,3 @@
 // Include details about any licenses and how to sign up. Provide links as appropriate. If no licenses are required, clarify that. The following paragraphs provide examples of details you can provide. Remove italics, and rephrase as appropriate.
 
-This Quick Start requires a license for {partner-product-short-name}. To use the Quick Start in your production environment, sign up for a license at <link>. When you launch the Quick Start, place the download URL in the form so your software package is installed by the quickstart, and the license key you are provided will can be applied in the application GUI after you login for the first time.
+This Quick Start requires a license for {partner-product-short-name}. To use the Quick Start in your production environment, request a license and download linke by sending an email to aws-quickstart@datarobot.com with your name, title and company name. You should receive a response within a business day with a license key. When you launch the Quick Start, place the download URL in the form so your software package is installed by the quickstart, and the license key you are provided will can be applied in the application GUI after you login for the first time.
