--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -1,17 +1,17 @@
 // Change the following attributes.
-:quickstart-project-name: quickstart-documentation-base
+:quickstart-project-name: quickstart-data-robot-automl-platform
 :partner-product-name: DataRobot AutoML 7.1
 // For the following attribute, if you have no short name, enter the same name as partner-product-name.
 :partner-product-short-name: DataRobot AutoML 7.1
 // If there's no partner, comment partner-company-name.
-:partner-company-name: Example Company Name, Ltd.
-:doc-month: June
+:partner-company-name: DataRobot, Inc.
+:doc-month: July
 :doc-year: 2021
 // Uncomment the following "contributor" attributes as appropriate. If the partner agrees to include names, enter contributor names for every line we use. If partner doesn't want to include names, delete all placeholder names and keep only "{partner-company-name}" and "AWS Quick Start team." 
 :partner-contributors: Wes Wagner, Dennis Whitney, {partner-company-name}
 //:other-contributors: Akua Mansa, Trek10
 //:aws-contributors: Janine Singh, AWS IoT Partner team
-:quickstart-contributors: Toni Jones, AWS Quick Start team
+:quickstart-contributors: Dylan Owen, AWS Quick Start team
 // For deployment_time, use minutes if deployment takes an hour or less, 
 // for example, 30 minutes or 60 minutes. 
 // Use hours for deployment times greater than 60 minutes (rounded to a quarter hour),
