--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -11,7 +11,7 @@
 :partner-contributors: Wes Wagner, Dennis Whitney, {partner-company-name}
 //:other-contributors: Akua Mansa, Trek10
 //:aws-contributors: Janine Singh, AWS IoT Partner team
-:quickstart-contributors: Dylan Owen, AWS Quick Start team
+:quickstart-contributors: Dylan Owen, AWS Integration & Automation team
 // For deployment_time, use minutes if deployment takes an hour or less, 
 // for example, 30 minutes or 60 minutes. 
 // Use hours for deployment times greater than 60 minutes (rounded to a quarter hour),
