--- a/docs/partner_editable/faq_troubleshooting.adoc
+++ b/docs/partner_editable/faq_troubleshooting.adoc
@@ -18,4 +18,5 @@ For more information, see https://docs.aws.amazon.com/AWSCloudFormation/latest/U
 
 == Troubleshooting
 
-<Steps for troubleshooting the deployment.>
+//TODO: add in email address for support
+For any troubleshooting please reach out to the DataRobot at 
