--- a/docs/partner_editable/licenses.adoc
+++ b/docs/partner_editable/licenses.adoc
@@ -1,3 +1,3 @@
 // Include details about any licenses and how to sign up. Provide links as appropriate. If no licenses are required, clarify that. The following paragraphs provide examples of details you can provide. Remove italics, and rephrase as appropriate.
 
-This Quick Start requires a license for {partner-product-short-name}. To use the Quick Start in your production environment, request a license and download link by sending an email to aws-quickstart@datarobot.com with your name, title and company name. You should receive a response within a business day. When launching the Quick Start, place the download URL in the required parameter so your software package is installed by the Quick Start, and the license key you are provided can be applied in the application GUI after you login for the first time.
+This Quick Start requires a license for {partner-product-short-name}. To use the Quick Start in your production environment, request a license and download link by sending an email to aws-quickstart@datarobot.com with your name, title, and company name. You should receive a response within a business day. When launching the Quick Start, place the download URL in the required parameter so your software package is installed by the Quick Start. This also ensures that the license key you are provided is applied in the application user interface after you log in for the first time.
