--- a/docs/partner_editable/pre-reqs.adoc
+++ b/docs/partner_editable/pre-reqs.adoc
@@ -2,4 +2,4 @@
 
 ==== Prepare for the deployment
 
-Prior to deployment, you will need to request a licence and download URL. Please see the link:#_software_licenses[Software licenses] section for more information.
+Prior to deployment, request a license and download URL. See the link:#_software_licenses[Software licenses] section for more information.
