--- a/docs/partner_editable/overview_target_and_usage.adoc
+++ b/docs/partner_editable/overview_target_and_usage.adoc
@@ -4,6 +4,6 @@
 
 This guide provides instructions for deploying the {partner-product-short-name} Quick Start reference architecture on the AWS Cloud.
 
-This Quick Start is for users who want to install {partner-product-short-name} to create training models, perform automatic discovery of features, build simple applications, and make predictions in real-time/batch at a limited scale. 
+This Quick Start is for users who want to install {partner-product-short-name} to create training models, perform automatic discovery of features, build simple applications, and make predictions in real-time or batch loads at a limited scale. 
 
 For larger-scale implementations, reach out to {partner-product-short-name} sales at sales@datarobot.com to discuss proof-of-concept options and software features.
