--- a/docs/partner_editable/product_description.adoc
+++ b/docs/partner_editable/product_description.adoc
@@ -4,4 +4,4 @@
 
 {partner-product-short-name} accelerates your AI success by putting the power of cutting-edge machine learning technology into the hands of the team you already have in place. The platform incorporates the knowledge, experience, and best practices of the world's leading data scientists to deliver unmatched levels of automation, accuracy, and transparency to help your business transform into an AI-driven enterprise.
 
-Use this Quick Start to deploy {partner-product-short-name} software (also available as a SaaS model hosted on AWS) into your own account and VPC. AWS gives you flexibility to deploy to one or more global Regions and a high-availability environment backed by AWS's architecture and well-defined shared-responsibility model for security. 
+Use this Quick Start to deploy {partner-product-short-name} software (also available as a SaaS model hosted on AWS) into your own account and VPC. AWS gives you flexibility to deploy to one or more global AWS Regions and a high availability environment backed by the AWS architecture and well-defined shared responsibility model for security. 
