--- a/docs/partner_editable/additional_info.adoc
+++ b/docs/partner_editable/additional_info.adoc
@@ -4,33 +4,27 @@
 == Post-deployment steps
 // If post-deployment steps are required, add them here. If not, remove the heading
 
-Log in to the application by targeting your host name you provided for the application server (or the AWS generated DNS name for the port 80 front end load balancer if you chose an insecure installation)
-These can be found in the Outputs tab in the CloudFormation console.
+In the CloudFormation console,, locate the values in the *Outputs* tab. Then log in to the application by targeting the hostname you provided for the application server (or the AWS-generated DNS name for the port 80 front-end load Application Load Balancer, if you chose an insecure installation). 
 
-The initial admin username is: localadmin@datarobot.com
-The password can be found in the account used to install the Quick Start, inside secrets manager.
+The initial admininstrator user name is localadmin@datarobot.com. The password is located in AWS Secrets Manager in the account you used to install the Quick Start.
 
-When you have logged in, choose the menu in the upper right hand corner to find the drop down which will allow you to insert the license key you received from DataRobot.
+After logging in, open the menu in the upper-right corner of the window to find the option for inserting the license key you received from DataRobot.
 
 == Best practices for using {partner-product-short-name} on AWS
 // Provide post-deployment best practices for using the technology on AWS, including considerations such as migrating data, backups, ensuring high performance, high availability, etc. Link to software documentation for detailed information.
 
-Do not use or share the localadmin@datarobot.com, use it to create separate accounts for each user and assign appropriate permissions by role.
-
-Keep training data relatively small. Often there are very small incremental gains by increasing the size of training data.
-A helpful quickstart Guide can be found here: https://api-docs.datarobot.com/docs/quickstart-guide 
-It has helpful tutorial and will provide a basic introduction to the DataRobot Platform.
-
+Keep training data relatively small to avoid incurring incremental costs. For more information, including a tutorial and an instroduction to DataRobot, see the https://api-docs.datarobot.com/docs/quickstart-guide[DataRobot Quickstart Guide]. 
 
 == Security
 // Provide post-deployment best practices for using the technology on AWS, including considerations such as migrating data, backups, ensuring high performance, high availability, etc. Link to software documentation for detailed information.
 
-Do not use or share the localadmin@datarobot.com, use it to create separate accounts for each user and assign appropriate permissions by role.
-If you initially chose an HTTP installation, we highly recommend that you edit the front end load balancers to change the listeners to port 443 and add certificates you control to secure the installation.
-The installation leverages your default EBS encryption key for the region into which it was installed. Rotate this key to a different key if your security policies require it.
-The base install creates a crontab entry to dump the data into a backups directory on the S3 bucket at midnight. We recommend changing this to your backup and retention processes/policies.
+Do not use or share the localadmin@datarobot.com user name. Only use it to create separate accounts for each user and then assign the appropriate permissions by role.
+
+If you initially chose an HTTP installation, edit the front-end Application Load Balancers by changing the listeners to port 443 and adding the certificates you control to secure the installation.
+The installation uses your default Amazon Elastic Block Store (Amazon EBS) encryption key for the installation Region. Use a different key if your security policies require it.
+The base installation creates a crontab entry to dump data into a backup directory on the S3 bucket at midnight. Change this S3 bucket to be your backup directory for data and retention processes and policies.
 
 == Other useful information
 //Provide any other information of interest to users, especially focusing on areas where AWS or cloud usage differs from on-premises usage.
 
-This install is setup to autoscale to 10 workers. If you find that is insufficient for training models in a timely manner, reach out to sales@datarobot.com to obtain additional capacity and customer-facing data scientist support for a larger proof of concept effort.
+The installation is designed to auto scale to 10 workers. If you need more than 10 for your training models, contact sales@datarobot.com to request support and additional capacity.
