--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -28,7 +28,7 @@ Shell (SSH) access to Amazon Elastic Compute Cloud (Amazon EC2) instances in pub
 ** Two EC2 instances for the servers used for constructing data models. 
 ** Three EC2 instances for the HA data (backend) servers running MongoDB and Redis.
 ** An Auto Scaling group with up to five EC2 instances with worker servers for machine learning.
-* Amazon CloudWatch alarms for Auto Scaling based on load.
+* Amazon CloudWatch alarms for auto scaling based on load.
 * (HTTPS option) Amazon Route 53 zone records, if applicable.
 * (HTTPS option) Certificates in AWS Certificate Manager (ACM) for the Application Load Balancers.
 * Private Amazon Simple Storage Service (Amazon S3) bucket for data storage and ingestion operations.
