--- a/docs/partner_editable/faq_troubleshooting.adoc
+++ b/docs/partner_editable/faq_troubleshooting.adoc
@@ -19,4 +19,4 @@ For more information, see https://docs.aws.amazon.com/AWSCloudFormation/latest/U
 == Troubleshooting
 
 //TODO: add in email address for support
-For troubleshooting, reach out to the DataRobot support team at aws-quickstart@datarobot.com.
+For troubleshooting, contact the DataRobot support team at aws-quickstart@datarobot.com.
